11/30 최종 신효합체 : UI 1차 수정 완료

--- a/app/src/main/res/drawable/drawable.xml
+++ b/app/src/main/res/drawable/drawable.xml
@@ -4,7 +4,7 @@
     <item android:drawable="@color/colorPrimary" />
 
     <item>
-        <bitmap android:src="@drawable/farmer"
+        <bitmap android:src="@drawable/home"
             android:gravity="center" />
 
     </item>
