--- a/app/src/main/res/layout/activity_buyer.xml
+++ b/app/src/main/res/layout/activity_buyer.xml
@@ -29,7 +29,7 @@
         android:id="@+id/select_crop_buyer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="검색을 한 후 지도확인으로 넘어가주세요"
+        android:text="검색을 한 후 지도확인을 누르세요"
         android:layout_marginBottom="10dp"
         android:textColor="#000000"
         android:layout_gravity="center"
