--- a/app/src/main/res/layout/activity_check_title.xml
+++ b/app/src/main/res/layout/activity_check_title.xml
@@ -8,18 +8,25 @@
     android:orientation="vertical">
 
 
-
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="39dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="70dp"
+        android:layout_marginBottom="10dp"
         android:text="게시물 확인"
         android:textColor="#000000"
         android:textSize="30sp"
         android:textStyle="bold"
         android:typeface="monospace" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="삭제를 원하는 게시글 제목을 선택하세요"
+        android:textColor="#000000"
+        android:layout_gravity="center" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,6 +68,9 @@
         android:id="@+id/sname_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         android:textFilterEnabled="true" />
 
 </LinearLayout>
