--- a/app/src/main/res/layout/activity_farm.xml
+++ b/app/src/main/res/layout/activity_farm.xml
@@ -7,19 +7,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <TextView
-        android:id="@+id/textView_main_label"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="10dp"
-        android:text="주소"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:typeface="monospace" />
+            android:id="@+id/textView_main_label"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="10dp"
+            android:text="주소"
+            android:textColor="#000000"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:typeface="monospace" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,13 +26,12 @@
         android:text="농장 주소를 검색하거나 선택하세요"
         android:layout_marginBottom="10dp"
         android:textColor="#000000"
-        android:layout_gravity="center"
-        />
+        android:layout_gravity="center" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:orientation="horizontal"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -42,17 +40,12 @@
         <TextView
             android:id="@+id/textView1"
             android:text="검색"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:textSize="18sp"
             android:gravity="center" />
-
-<!--        <EditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_toRightOf="@id/textView1"-->
-<!--            android:id="@+id/editTextFilter"/>-->
 
         <EditText
             android:id="@+id/editTextFilter"
@@ -71,26 +64,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:orientation="horizontal"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginRight="20dp">
 
         <TextView
             android:id="@+id/textView2"
             android:text="선택"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:textSize="18sp"
             android:gravity="center" />
 
-        <!--        <EditText-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_toRightOf="@id/textView1"-->
-        <!--            android:id="@+id/editTextFilter"/>-->
 
         <TextView
             android:id="@+id/selected_address"
@@ -98,7 +86,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:textSize="18sp"
+            android:textSize="13sp"
             android:gravity="center"
             android:layout_marginRight="10dp"
             android:background="@drawable/border" />
@@ -130,28 +118,45 @@
 <!--    </LinearLayout>-->
 
 
-<!--    여기부터해야함!!!!!!!!!!!!!!!!!!!!-->
-    <ListView
-        android:id="@+id/listview1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/editTextFilter"
-        android:textFilterEnabled="true" />
+<!--    <ListView-->
+<!--        android:id="@+id/listview1"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_below="@id/editTextFilter"-->
+<!--        android:textFilterEnabled="true" />-->
+
+
+    <Button
+        android:id="@+id/btn_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:onClick="OnClickHandle"
+        android:text="확인"
+        tools:ignore="OnClick"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/button_design"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"/>
+
 
     <ListView
-        android:id="@+id/crop_list"
+        android:id="@+id/listview1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:cacheColorHint="#FFF9F7E8"
         android:scrollbarSize="7dp"
         android:scrollbarStyle="insideOverlay"
         android:textSize="18sp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/border"></ListView>
 
-<!--    <Button-->
+
+
+
+    <!--    <Button-->
 <!--        android:id="@+id/btn_ok"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content"-->
@@ -160,15 +165,6 @@
 <!--        android:text="확인"-->
 <!--        android:layout_margin="10dp"/>-->
 
-    <Button
-        android:id="@+id/btn_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:onClick="OnClickHandle"
-        android:text="확인"
-        tools:ignore="OnClick"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/button_design"/>
+
 
     </LinearLayout>
