--- a/app/src/main/res/layout/activity_information2.xml
+++ b/app/src/main/res/layout/activity_information2.xml
@@ -43,6 +43,7 @@
             android:id="@+id/textinfo"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:layout_weight="2"
             android:inputType="text"
             android:textSize="18sp" />
@@ -66,6 +67,7 @@
             android:id="@+id/textinfo2"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:layout_weight="2"
             android:inputType="text"
             android:textSize="18sp" />
@@ -91,6 +93,7 @@
             android:id="@+id/textinfo3"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:layout_weight="2"
             android:inputType="text"
             android:textSize="18sp" />
@@ -100,6 +103,7 @@
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="상세 내용 "
         android:textColor="#000000"
         android:textSize="18sp" />
@@ -111,7 +115,9 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_weight="2.5"
-
+        android:background="@drawable/border"
+        android:layout_marginTop="5dp"
+        android:textColor="#000000"
         android:inputType="textMultiLine"
         android:singleLine="false"
         android:textSize="18sp" />
@@ -128,23 +134,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:gravity="right"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/password"
-            android:layout_width="122dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="                      비밀번호 "
+            android:text="비밀번호"
             android:textColor="#000000"
             android:textSize="18sp" />
 
         <EditText
             android:id="@+id/inputpw"
-            android:layout_width="96dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
             android:hint="비밀번호를 입력하세요"
             android:inputType="text"
             android:textSize="18sp" />
@@ -152,14 +157,15 @@
     </LinearLayout>
 
 
-
     <Button
         android:id="@+id/btndelete"
-        android:layout_width="match_parent"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:background="#189BA3"
+        android:layout_gravity="right"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/button_design"
         android:onClick="btnOkay"
-        android:text="판매 정보 삭제" ></Button>
+        android:text="판매 정보 삭제"></Button>
 
 
 
