--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="270dp"
+        android:layout_width="wrap_content"
         android:layout_height="39dp"
         android:text="관리자에게 요청하기"
         android:textSize="30sp"
@@ -25,7 +25,8 @@
         android:layout_width="251dp"
         android:layout_height="198dp"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/request"></ImageView>
 
     <TextView
@@ -110,13 +111,13 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="147dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="요청하기"
-        android:background="#189BA3"
+        android:background="@drawable/button_design"
         android:textColor="#FFFFFAE7"
-        android:layout_gravity="center"
+        android:layout_gravity="right"
         android:onClick="ClickButton1"/>
 
 
