--- a/app/src/main/res/layout/list_test3.xml
+++ b/app/src/main/res/layout/list_test3.xml
@@ -12,8 +12,8 @@
 
     <TextView
         android:id="@+id/textView_list_time"
-        android:layout_width="wrap_content"
-        android:layout_height="400dp"
+        android:layout_width="300dp"
+        android:layout_height="35dp"
         android:textSize="18sp"
         android:textColor="#000000"
         android:gravity="left"/>
