--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -86,8 +86,8 @@
             android:layout_margin="1dp"
             android:background="@drawable/border"
             android:textSize="14sp"
-            android:layout_gravity="center"/>
-
+            android:layout_gravity="center"
+            android:gravity="center"/>
     </LinearLayout>
 
 
@@ -117,7 +117,7 @@
             android:background="@drawable/searching"
             android:layout_weight="0.2"
             android:onClick="buttonCr"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
 
         <!--app:srcCompat="@android:drawable/ic_menu_search"-->
 
@@ -128,7 +128,9 @@
             android:layout_margin="1dp"
             android:layout_weight="2.5"
             android:background="@drawable/border"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:gravity="center"
+            android:layout_gravity="center" />
 
     </LinearLayout>
 
