--- a/app/src/main/res/layout/activity_farm.xml
+++ b/app/src/main/res/layout/activity_farm.xml
@@ -7,18 +7,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <TextView
-            android:id="@+id/textView_main_label"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="70dp"
-            android:layout_marginBottom="10dp"
-            android:text="주소"
-            android:textColor="#000000"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+        android:id="@+id/textView_main_label"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="10dp"
+        android:text="주소"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="monospace" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,12 +27,13 @@
         android:text="농장 주소를 검색하거나 선택하세요"
         android:layout_marginBottom="10dp"
         android:textColor="#000000"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        />
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -40,12 +42,12 @@
         <TextView
             android:id="@+id/textView1"
             android:text="검색"
-            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="0.5"
+            android:layout_weight="1"
             android:textSize="18sp"
             android:gravity="center" />
+
 
         <EditText
             android:id="@+id/editTextFilter"
@@ -64,18 +66,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp">
 
         <TextView
             android:id="@+id/textView2"
             android:text="선택"
-            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="0.5"
+            android:layout_weight="1"
             android:textSize="18sp"
             android:gravity="center" />
 
@@ -86,44 +88,13 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:textSize="13sp"
+            android:textSize="18sp"
             android:gravity="center"
             android:layout_marginRight="10dp"
             android:background="@drawable/border" />
 
     </LinearLayout>
 
-
-
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal">-->
-
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textSize="26sp"-->
-<!--            android:layout_marginRight="8dp"-->
-<!--            android:id="@+id/textView2"-->
-<!--            android:text="선택한 주소" />-->
-
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textSize="26sp"-->
-<!--            android:layout_marginRight="8dp"-->
-<!--            android:id="@+id/selected_address"/>-->
-
-<!--    </LinearLayout>-->
-
-
-<!--    <ListView-->
-<!--        android:id="@+id/listview1"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_below="@id/editTextFilter"-->
-<!--        android:textFilterEnabled="true" />-->
 
 
     <Button
@@ -138,33 +109,21 @@
         android:layout_marginTop="10dp"
         android:layout_gravity="center"/>
 
-
     <ListView
         android:id="@+id/listview1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:cacheColorHint="#FFF9F7E8"
+        android:layout_height="match_parent"
+        android:layout_below="@id/editTextFilter"
+        android:textFilterEnabled="true"
+        android:background="@drawable/border"
         android:scrollbarSize="7dp"
         android:scrollbarStyle="insideOverlay"
         android:textSize="18sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/border"></ListView>
+        android:layout_marginBottom="20dp" />
+
+</LinearLayout>
 
 
-
-
-    <!--    <Button-->
-<!--        android:id="@+id/btn_ok"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="#189BA3"-->
-<!--        android:onClick="OnClickHandle"-->
-<!--        android:text="확인"-->
-<!--        android:layout_margin="10dp"/>-->
-
-
-
-    </LinearLayout>
