--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,12 +9,11 @@
 
     <ImageView
         android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_height="212dp"
         android:layout_gravity="center"
         android:layout_marginTop="150dp"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/logo">
-    </ImageView>
+        android:background="@drawable/logo"></ImageView>
 
     <LinearLayout
         android:layout_width="300dp"
