--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -60,7 +60,7 @@
             android:layout_weight="3"
             android:textColor="#000000"
             android:dividerHeight="35dp"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
 
     </LinearLayout>
 
@@ -106,14 +106,15 @@
             android:text="판매 작물: "
             android:textColor="#000000"
             android:textSize="18sp" />
+
         <TextView
             android:id="@+id/textView_crop"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_weight="7"
+            android:layout_weight="5"
+            android:gravity="left"
             android:textColor="#000000"
-            android:textSize="18sp"
-            android:gravity="left"/>
+            android:textSize="15sp" />
     </LinearLayout>
 
 
@@ -127,20 +128,27 @@
 
         <TextView
             android:id="@+id/time"
-            android:layout_width="116dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:text="작성일:"
             android:textColor="#000000"
             android:textSize="18sp" />
+
         <ListView
             android:id="@+id/listView_time"
-            android:layout_width="310dp"
+            android:layout_width="90dp"
             android:layout_height="35dp"
             android:layout_weight="3"
             android:dividerHeight="35dp"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
+
+        <TextView
+            android:layout_width="164dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:gravity="left"/>
     </LinearLayout>
 
     <TextView
@@ -162,7 +170,7 @@
         android:dividerHeight="400dp"
         android:background="@drawable/border"
         android:layout_gravity="left"
-        android:textSize="18sp"/>
+        android:textSize="15sp"/>
 
 
     <Button
