--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -158,7 +158,7 @@
             android:layout_width="224dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:hint=" 비밀번호를 입력하세요"
+            android:hint="차후 게시글 삭제시 본인확인 용도"
             android:inputType="text"
             android:textSize="18sp" />
 
